# agent-flow

./: .gitignore  001_init_agent_workflow_platform_mvp.sql  agent_workflow_platform_api_design_v_1.md  agent_workflow_platform_backend_structure_v_1.md  agent_workflow_platform_database_er_v_1.md  agent_workflow_platform_design_v_1 (1).md  agent_workflow_platform_development_task_breakdown_v_1.md  agent_workflow_platform_frontend_editor_design_v_1.md  agent_workflow_platform_mvp_scope_v_1.md  agent_workflow_platform_node_protocol_v_1.md  agent_workflow_platform_runtime_detail_v_1.md  agent_workflow_platform_sample_workflows_v_1.md  agent_workflow_platform_testing_deployment_v_1.md  consistency_patches_v0.1_claude.md  design_review_v0.1_claude.md  implementation_details_v0.1_claude.md  openapi_agent_workflow_platform_mvp_v1.yaml  security_design_v0.1_claude.md
agent flow/backend/: .dockerignore  .env.example  Dockerfile  pyproject.toml
agent flow/backend/agent_flow_api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
agent flow/backend/app/: main.py
agent flow/backend/app/core/: auth.py  config.py
agent flow/backend/app/services/: audit.py  generated_runtime.py  graph_validation.py  human_approvals.py  runtime.py  (+5 more)
agent flow/backend/tests/: test_audit.py  test_document_processing_worker.py  test_generated_runtime.py  test_graph_validation.py  test_health.py  test_human_approvals.py  test_knowledge_processing.py  test_management_api.py  test_node_types.py  test_ops_api.py  test_run_retry.py  test_runtime_nodes.py  test_workflow_codegen.py  test_workflow_run_worker.py
(+163 files in other folders)
