[project]
name = "agent-flow-api"
version = "0.1.0"
description = "FastAPI backend for the Agent Workflow Platform MVP."
requires-python = ">=3.12,<3.14"
dependencies = [
  "alembic>=1.16,<2.0",
  "asyncpg>=0.30,<1.0",
  "cryptography>=43,<47",
  "fastapi>=0.115,<1.0",
  "httpx>=0.28,<1.0",
  "markdown-it-py>=3,<5",
  "openai>=1.80,<3.0",
  "orjson>=3.10,<4.0",
  "pgvector>=0.3,<1.0",
  "pydantic-settings>=2.8,<3.0",
  "pypdf>=5,<7",
  "python-docx>=1.1,<2.0",
  "python-multipart>=0.0.20,<1.0",
  "redis>=5,<7",
  "rq>=2,<3",
  "sqlalchemy[asyncio]>=2.0,<3.0",
  "tiktoken>=0.9,<1.0",
  "uvicorn[standard]>=0.34,<1.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3,<9.0",
  "pytest-asyncio>=0.25,<2.0",
  "ruff>=0.9,<1.0"
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = [".tmp", "generated_workflows"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
